added js_selectorItem classes

--- a/pages/components.html
+++ b/pages/components.html
@@ -10,7 +10,7 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector JS_selector pmx-selector--collapsed">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item  JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
           </div>
@@ -27,7 +27,7 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector JS_selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
             <span class="pmx-selector__blockSeperator">•</span>
@@ -46,21 +46,21 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector JS_selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
@@ -79,12 +79,12 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">ܐ</span>
           </div>
@@ -101,17 +101,17 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
           </div>
@@ -128,21 +128,21 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
             <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
           </div>
         </div>
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
             <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
             <span class="pmx-selector__blockSeperator">•</span>
