--- a/pages/components.html
+++ b/pages/components.html
@@ -124,6 +124,53 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
+    <div class="field__label">Status ܐ Single Select - expanded</div>
+    <div class="field__value">
+
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ipsum</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Dolor</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Amet</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="field-container">
+  <div class="field">
     <div class="field__label">Teams ܐ Multi Select - expanded</div>
     <div class="field__value">
 
