--- a/pages/components.html
+++ b/pages/components.html
@@ -30,7 +30,7 @@ permalink: /components
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</span>
           </div>
         </div>
@@ -48,22 +48,24 @@ permalink: /components
       <div class="pmx-selector JS_selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">ग़</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Label</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
           </div>
         </div>
@@ -140,7 +142,17 @@ permalink: /components
         </div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Paused</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Rejected</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem">
@@ -178,21 +190,21 @@ permalink: /components
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
           </div>
         </div>
@@ -209,7 +221,7 @@ permalink: /components
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect JS_pmx-selector--changeIcons">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">-</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ޅ</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
@@ -276,10 +288,10 @@ permalink: /components
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ބ</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
           </div>
         </div>
@@ -297,7 +309,7 @@ permalink: /components
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
           </div>
         </div>
@@ -315,7 +327,7 @@ permalink: /components
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Title</span>
-            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
           </div>
         </div>
