--- a/pages/components.html
+++ b/pages/components.html
@@ -9,7 +9,7 @@ permalink: /components
     <div class="field__label">Due date ܐ Single Select - collapsed</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--collapsed">
+      <div class="pmx-selector pmx-selector--collapsed JS_selector">
         <div class="pmx-selector__item  JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
@@ -26,7 +26,7 @@ permalink: /components
     <div class="field__label">Status ܐ Single Select - collapsed</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
+      <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
@@ -45,15 +45,15 @@ permalink: /components
     <div class="field__label">Tags ܐ Multi Select - collapsed</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockSeperator"></span>
@@ -62,7 +62,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockSeperator"></span>
@@ -80,13 +80,13 @@ permalink: /components
     <div class="field__label">Billable ܐ Single Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
           </div>
         </div>
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">ܐ</span>
           </div>
@@ -102,13 +102,13 @@ permalink: /components
     <div class="field__label">Status ܐ Single Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
@@ -129,13 +129,13 @@ permalink: /components
     <div class="field__label">Status ܐ Single Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
@@ -157,7 +157,7 @@ permalink: /components
         </div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum dolo rsit amet lore ipsum dolor sit amet lorem</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem">
@@ -186,8 +186,8 @@ permalink: /components
     <div class="field__label">Teams ܐ Multi Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
             <span class="pmx-selector__blockSeperator"></span>
@@ -201,7 +201,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
           </div>
         </div>
-        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
             <span class="pmx-selector__blockSeperator"></span>
@@ -218,7 +218,7 @@ permalink: /components
   <div class="field">
     <div class="field__label">Unselectable Single Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect JS_pmx-selector--changeIcons">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector JS_pmx-selector--changeIcons">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ޅ</span>
