--- a/pages/components.html
+++ b/pages/components.html
@@ -53,6 +53,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
+        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
@@ -62,6 +63,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
+        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
@@ -194,6 +196,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
           </div>
         </div>
+        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
@@ -201,6 +204,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
           </div>
         </div>
+        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
