--- a/pages/components.html
+++ b/pages/components.html
@@ -4,10 +4,10 @@ title: Components
 permalink: /components
 ---
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Due date ܐ Single Select - collapsed</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Due date ܐ Single Select - collapsed</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed JS_selector">
         <div class="pmx-selector__item  JS_selectorItem pmx-selector__item--selected">
@@ -21,10 +21,19 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Status ܐ Single Select - collapsed</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field-handlers">
+    <div class="pmx-field-handlers__errors">
+    </div>
+    <div class="pmx-field-handlers__actions">
+    </div>
+    <div class="pmx-field-handlers__tooltip">
+    </div>
+  </div>
+
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Status ܐ Single Select - collapsed</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
@@ -40,10 +49,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Tags ܐ Multi Select - collapsed</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Tags ܐ Multi Select - collapsed</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
@@ -77,10 +86,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Billable ܐ Single Select - expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Billable ܐ Single Select - expanded</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
@@ -99,24 +108,30 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Status ܐ Single Select - expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Status ܐ Single Select - expanded</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">च</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ण</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ऒ</span>
+            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
           </div>
         </div>
@@ -126,10 +141,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Status ܐ Single Select - expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Status ܐ Single Select - expanded</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
@@ -183,10 +198,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Teams ܐ Multi Select - expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Teams ܐ Multi Select - expanded</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
@@ -218,10 +233,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Unselectable Single Select - expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Unselectable Single Select - expanded</div>
+    <div class="pmx-field__value">
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector JS_pmx-selector--changeIcons">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
@@ -238,10 +253,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
+    <div class="pmx-field__value">
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
@@ -258,10 +273,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Mobile view selector ܐ Single Select - Expanded</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Mobile view selector ܐ Single Select - Expanded</div>
+    <div class="pmx-field__value">
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleSelect">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
@@ -284,10 +299,10 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Prefix ܐ Type ܐ Field</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Prefix ܐ Type ܐ Field</div>
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
@@ -305,9 +320,9 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
@@ -323,9 +338,9 @@ permalink: /components
   </div>
 </div>
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
