--- a/pages/filter.html
+++ b/pages/filter.html
@@ -7,7 +7,7 @@ permalink: /filter
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Filter - collapsed</div>
+    <div class="pmx-field__label">Filter date - collapsed</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect JS_selector" data-popid="#multiSelector-3">
@@ -56,6 +56,81 @@ permalink: /filter
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Filter tag - collapsed</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect JS_selector" data-popid="#multiSelector-3">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">include</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">team</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">or</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">squad</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">squad2</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or exclude</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">community</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">design</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">and</span>
+          </div>
+        </div>
+        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #dcdcdc; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">sprint</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">sprint212</span>
           </div>
         </div>
       </div>
