--- a/pages/components.html
+++ b/pages/components.html
@@ -6,7 +6,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Due date ܐ Single Select - collapsed</div>
+    <div class="pmx-field__label">Due date | Single Select - collapsed</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed JS_selector">
@@ -22,17 +22,8 @@ permalink: /components
 </div>
 
 <div class="pmx-field">
-  <div class="pmx-field-handlers">
-    <div class="pmx-field-handlers__errors">
-    </div>
-    <div class="pmx-field-handlers__actions">
-    </div>
-    <div class="pmx-field-handlers__tooltip">
-    </div>
-  </div>
-
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Status ܐ Single Select - collapsed</div>
+    <div class="pmx-field__label">Status | Single Select - collapsed</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
@@ -51,7 +42,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Tags ܐ Multi Select - collapsed</div>
+    <div class="pmx-field__label">Tags | Multi Select - collapsed</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
@@ -88,7 +79,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Billable ܐ Single Select - expanded</div>
+    <div class="pmx-field__label">Billable | Single Select - expanded</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
@@ -110,7 +101,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Status ܐ Single Select - expanded</div>
+    <div class="pmx-field__label">Status | Single Select - expanded</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
@@ -143,7 +134,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Status ܐ Single Select - expanded</div>
+    <div class="pmx-field__label">Status | Single Select - expanded</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
@@ -200,7 +191,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Teams ܐ Multi Select - expanded</div>
+    <div class="pmx-field__label">Teams | Multi Select - expanded</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
@@ -255,7 +246,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
+    <div class="pmx-field__label">Tablet view selector | Unselectable Single Select - expanded</div>
     <div class="pmx-field__value">
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__item JS_selectorItem">
@@ -275,7 +266,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Mobile view selector ܐ Single Select - Expanded</div>
+    <div class="pmx-field__label">Mobile view selector | Single Select - Expanded</div>
     <div class="pmx-field__value">
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleSelect">
         <div class="pmx-selector__item JS_selectorItem">
@@ -301,7 +292,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Prefix ܐ Type ܐ Field</div>
+    <div class="pmx-field__label">Prefix | Type | Field</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
