update new tags

--- a/pages/components.html
+++ b/pages/components.html
@@ -30,7 +30,6 @@ permalink: /components
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</span>
           </div>
         </div>
@@ -49,25 +48,22 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Label</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
           </div>
         </div>
@@ -76,6 +72,46 @@ permalink: /components
     </div>
   </div>
 </div>
+
+
+
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Tags | Multi Select</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector" data-popid="#multiSelector-3">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
@@ -108,21 +144,18 @@ permalink: /components
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">च</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ण</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ऒ</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
           </div>
         </div>
@@ -198,23 +231,20 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
           </div>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
           </div>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
           </div>
         </div>
@@ -299,7 +329,6 @@ permalink: /components
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ބ</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
