--- a/pages/components.html
+++ b/pages/components.html
@@ -29,7 +29,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0BDA51;">܌</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</span>
           </div>
         </div>
@@ -47,14 +47,14 @@ permalink: /components
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Label</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
@@ -63,7 +63,7 @@ permalink: /components
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
           </div>
         </div>
@@ -87,10 +87,10 @@ permalink: /components
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
             <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator">
@@ -98,10 +98,37 @@ permalink: /components
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+      </div>
+
+      or
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector" data-popid="#multiSelector-3">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Include</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">And</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
           </div>
         </div>
       </div>
@@ -126,7 +153,7 @@ permalink: /components
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">ܐ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #E52C2C;">ܐ</span>
           </div>
         </div>
       </div>
@@ -143,19 +170,19 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">च</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">च</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ण</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ण</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ऒ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ऒ</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
           </div>
         </div>
@@ -230,21 +257,21 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0BDA51;">܌</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00BFFF;">܌</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #F4CA16;">܌</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
           </div>
         </div>
@@ -298,7 +325,7 @@ permalink: /components
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Mobile view selector | Single Select - Expanded</div>
     <div class="pmx-field__value">
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--requi#E52C2C pmx-selector--toggleSelect">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
@@ -328,7 +355,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ބ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ބ</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
