--- a/pages/components.html
+++ b/pages/components.html
@@ -29,7 +29,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0BDA51;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">܌</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</span>
           </div>
         </div>
@@ -80,15 +80,13 @@ permalink: /components
     <div class="pmx-field__label">Tags | Multi Select</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector" data-popid="#multiSelector-3">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator">
           <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
           </div>
         </div>
@@ -98,24 +96,26 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
       </div>
 
-      or
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or</span>
+          </div>
+        </div>
+      </div>
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector" data-popid="#multiSelector-3">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator">
           <span class="pmx-selector__itemSeperatorLabel">Include</span>
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
           </div>
         </div>
@@ -125,8 +125,6 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Team</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
           </div>
         </div>
